test profiles generated randomly